# budgie

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  check_db.py  dev.ps1  docker-compose.yml  entrypoint.sh  pyproject.toml  test_startup.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docker.yml
alembic/: env.py
alembic/versions/: 69e73afdd24c_add_webauthn_credentials_table.py  a1b2c3d4e5f6_add_envelopes_refactor_budget.py  a7b8c9d0e1f2_add_transaction_type_to_category_rules.py  b2c3d4e5f6a7_add_budget_mode_to_users.py  b8c9d0e1f2a3_add_envelope_id_to_transactions.py  c3d4e5f6a7b8_add_emoji_to_envelopes.py  c4d88aefeb0b_add_encryption_fields_to_user.py  c7447ba16544_v2_envelope_types_transaction_status.py  d4e5f6a7b8c9_add_reconciled_with_id_to_transactions.py  df8311bab1a1_initial_schema.py  e1f2a3b4c5d6_encrypt_text_columns.py  e5f6a7b8c9d0_add_color_index_to_envelopes.py  f2a3b4c5d6e7_add_fields_encrypted_to_users.py  f6a7b8c9d0e1_add_amount_range_to_category_rules.py
budgie/: __init__.py  config.py  database.py  limiter.py  main.py
budgie/api/: __init__.py  accounts.py  auth.py  budget.py  categories.py  categorize.py  category_groups.py  category_rules.py  data_reset.py  deps.py  envelopes.py  imports.py  payees.py  reconciliation.py  transactions.py  users.py  webauthn.py
budgie/importers/: __init__.py  base.py  csv_importer.py  excel_importer.py  ofx_importer.py  qif_importer.py
budgie/models/: __init__.py  account.py  budget.py  category.py  category_rule.py  envelope.py  payee.py  transaction.py  user.py  webauthn.py
budgie/schemas/: __init__.py  account.py  auth.py  budget.py  categorizer.py  category.py  category_rule.py  envelope.py  importer.py  payee.py  reconciliation.py  transaction.py  user.py
budgie/services/: __init__.py  account.py  auth.py  budget.py  categorizer.py  category.py  category_rule.py  crypto.py  data_migration.py  data_reset.py  encryption.py  envelope.py  importer.py  key_store.py  payee.py  reconciliation.py  transaction.py  user.py  webauthn.py
docs/: DEPLOY.md  PLAN.md  TECHNICAL.md  TECHNIQUE.md  USER.md  UTILISATEUR.md
docs/en/: developer-guide.md  plan.md  roadmap.md  user-guide.md
docs/fr/: developer-guide.md  plan.md  roadmap.md  user-guide.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.json
scripts/: backup.sh  reset_password.py
tests/: __init__.py  conftest.py
(+90 files in other folders)
